Update K8s with Helm Charts

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     server_name localhost;
 
-    root /var/www/public;  # Ensure this points to the 'public' directory of your Laravel app
+    root /var/www/public;
     index index.php index.html index.htm;
 
     location / {
@@ -15,7 +15,7 @@ server {
 
     location ~ \.php$ {
         include fastcgi_params;
-        fastcgi_pass app:9000;  # Ensure this matches your Docker Compose service name and port
+        fastcgi_pass app:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
